--- a/cli-aaa-app/build.gradle
+++ b/cli-aaa-app/build.gradle
@@ -17,6 +17,8 @@ repositories {
 }
 
 dependencies {
+    implementation "com.h2database:h2:1.4.200"
+    implementation "org.flywaydb:flyway-core:6.3.3"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation("org.apache.logging.log4j:log4j-api:$log4j2_version")
     implementation("org.apache.logging.log4j:log4j-core:$log4j2_version")
