--- a/WEB/build.gradle
+++ b/WEB/build.gradle
@@ -4,8 +4,9 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
 dependencies {
-    compile group: 'javax', name: 'javaee-api', version: '7.0'
-    providedCompile("javax.servlet:javax.servlet-api:3.1.0")
+    compile group: 'javax', name: 'javaee-api'
+    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    implementation 'javax:javaee-api'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation("org.eclipse.jetty:jetty-server")
     implementation("org.eclipse.jetty:jetty-servlet")
