--- a/WEB/build.gradle
+++ b/WEB/build.gradle
@@ -3,14 +3,11 @@ plugins {
     id 'org.gretty' version '3.0.1'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
+configurations.create('download')
 dependencies {
-    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    implementation 'javax:javaee-api:7.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation("org.eclipse.jetty:jetty-server")
-    implementation("org.eclipse.jetty:jetty-servlet")
-    implementation("org.eclipse.jetty:jetty-webapp:9.4.25.v20191220")
-    implementation("org.eclipse.jetty:jetty-annotations:9.4.25.v20191220")
-    implementation("org.eclipse.jetty:apache-jsp:9.4.25.v20191220")
+    download 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
 }
 repositories {
     mavenCentral()
