--- a/WEB/build.gradle
+++ b/WEB/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'war'
     id 'org.gretty' version '3.0.1'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id "com.heroku.sdk.heroku-gradle" version "1.0.4"
 }
 configurations.create('download')
 dependencies {
@@ -21,4 +22,25 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+task stage() {
+    dependsOn clean, war
+}
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.download) {
+        include "jetty-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
+
+
+gradle.taskGraph.whenReady {
+    taskGraph ->
+        if (taskGraph.hasTask(stage)) {
+            test.enabled = false
+        }
 }
