--- a/WEB/build.gradle
+++ b/WEB/build.gradle
@@ -2,10 +2,10 @@ plugins {
     id 'war'
     id 'org.gretty' version '3.0.1'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id "com.heroku.sdk.heroku-gradle" version "1.0.4"
 }
 configurations.create('download')
 dependencies {
-    compile 'com.github.jsimone:webapp-runner:8.5.11.3'
     implementation 'javax:javaee-api:7.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     download 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
