--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ install:
   - chmod +x gradlew
 before_script:
   - ./gradlew build
-script: ./gradlew test
+script: ./gradlew test && ./gradlew jacocoTestReport
+after_success: bash <(curl -s https://codecov.io/bash)
