--- a/WEB/build.gradle
+++ b/WEB/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'com.google.inject:guice:4.2.3'
     download 'org.eclipse.jetty:jetty-runner:9.4.9.v20180320'
+    implementation 'com.google.inject.extensions:guice-servlet:4.2.3'
 }
 repositories {
     mavenCentral()
