--- a/WEB/src/main/webapp/WEB-INF/web.xml
+++ b/WEB/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
     <listener>
-        <listener-class>ServletsConfig</listener-class>
+        <listener-class>configs.ServletsConfig</listener-class>
     </listener>
     <filter>
         <filter-name>guice</filter-name>
